src/app.scss
#root {
  --link-color: #555;
  --visited-link-color: #888;
}

.dark #root {
  --link-color: #bbb;
  --visited-link-color: #888;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a.external-link:after {
  content: "\00a0\00a0\00a0\00a0\00a0";
  display: inline-block;
  margin-left: 0.2rem;
  text-decoration: none;
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 35 35' transform='translate(0 4)'%3E%3Cpath d='M17 13.5v6H5v-12h6m3-3h6v6m0-6-9 9' class='icon_svg-stroke' stroke='%23666' stroke-width='1.5' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'%3E%3C/path%3E%3C/svg%3E");
}

#root {
  display: flex;
  flex-direction: column;
}

h1 {
  margin: 0.67em auto !important;
  font-weight: normal;
  outline: none;
}

.error {
  font-size: 1.2em;
  color: #ff4444;
}

.paragraph {
  font-size: 1.2em;
  margin: 0 auto 1em auto;
}

.skeleton {
  margin: 0 !important;

  > .line {
    margin: 0 auto 10px auto;
    max-width: 600px;
    height: 40px;
    border-radius: 5px;
    background: -webkit-gradient(linear, left top, right top, color-stop(8%, rgba(130, 130, 130, 0.2)), color-stop(18%, rgba(130, 130, 130, 0.3)), color-stop(33%, rgba(130, 130, 130, 0.2)));
    background: linear-gradient(to right, rgba(130, 130, 130, 0.2) 8%, rgba(130, 130, 130, 0.3) 18%, rgba(130, 130, 130, 0.2) 33%);
    background-size: 800px 100px;
    animation: wave-lines 2s infinite ease-out;
  }
}

@keyframes wave-lines {
    0% {
        background-position: -468px 0;
    }
     100% {
        background-position: 468px 0;
    }
}

